   notices, even when set via constructor keyword arguments.  If you want an
   attribute to do this, you must define the attribute with the binding API;
   e.g. via 'requireBinding()' or 'binding.Constant()'.  If you do *not* want
   a binding to suggest a parent component, use 'suggestParent=False' in the
   binding definition.

 Corrected Problems

  - Fixed some problems with the test suite when running under Python 2.3.
    PEAK itself worked fine, but the test suite was bitten by two minor
    semantic changes that took effect in 2.3, resulting in lots of error
    messages about ModuleType needing a parameter, and a test failure for
    'checkClassInfo' in the 'FrameInfoTest' test class.

  - Transaction participants that raised an error in their 'abortTransaction()'
    method, would not receive a 'finishTransaction()' call, the error was
    passed through to the transaction service's caller, and later participants
    might not have received an 'abortTransaction()' message either.

  - SQL connections didn't close their cursors before aborting a transaction

  - The logging system would raise an error if a log message with no arguments
    contained a '%' sign.

  - There was a typo in peak.naming.arithmetic that caused homogeneous non-URL
    name subtraction to fail.

  - The default reactor supplied in 'peak.running.scheduler' would consume
    CPU continuously if it was waiting for I/O and no tasks were scheduled.

  - The 'peak.util.imports.whenImported' function didn't work.




Fixes and Enhancements since Version 0.5 alpha 1

 Changed, Enhanced, or Newly Deprecated Features

 - Added a 'shellcmd:'  URL scheme that returns a function that calls
   'os.system()' on the body of the URL.  It's intended for use as a command
   factory, as is needed by the 'URLChecker' periodic task.

 - You can now define adapters from arbitrary types to 'binding.IBindingNode',
   and thus be able to use them as part of a component hierarchy - without